# arena-ai-leaderboards

./: .env.example  .gitignore  AGENT_GUIDE.md  GETTING_STARTED.md  README.md  pyproject.toml
.github/workflows/: daily-track.yml  manual-backfill.yml
analysis/: __init__.py  differ.py  issue_writer.py  watchlist.yaml
collectors/: artificial_analysis.py  lmarena.py  schema.py
data/: latest.json
data/2026-04-21/: _index.json  code.json  document.json  image-edit.json  image-to-video.json  search.json  text-to-image.json  text-to-video.json  text.json  video-edit.json  vision.json
data/2026-04-23/: _index.json  code.json  document.json  image-edit.json  image-to-video.json  search.json  text-to-image.json  text-to-video.json  text.json  video-edit.json  vision.json
data/2026-04-24/: _index.json  code.json  document.json  image-edit.json  image-to-video.json  search.json  text-to-image.json  text-to-video.json  text.json  video-edit.json  vision.json
data/2026-04-29/: _index.json  code.json  document.json  image-edit.json  image-to-video.json  search.json  text-to-image.json  text-to-video.json  text.json  video-edit.json  vision.json
data/2026-04-30/: _index.json  document.json  search.json  video-edit.json  vision.json
data/2026-05-01/: _index.json  code.json  document.json  image-edit.json  image-to-video.json  search.json  text-to-image.json  text-to-video.json  text.json  video-edit.json  vision.json
data/2026-05-03/: _index.json  code.json  document.json  (+8 more)
query/: _common.py  compare.py  highlights.py  rank.py  trend.py
tests/: test_differ.py
(+850 files in other folders)
