[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mimo-leaderboard-tracker"
version = "0.1.0"
description = "Track MiMo (Xiaomi) model rankings on LMArena and Artificial Analysis leaderboards."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "MiMo Leaderboard Tracker contributors" },
]
keywords = ["llm", "leaderboard", "lmarena", "artificial-analysis", "mimo", "xiaomi"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
    "pyarrow>=15",
    "pandas>=2.0",
    "pyyaml>=6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Scarlett9826/arena-ai-leaderboards"
Upstream = "https://github.com/oolong-tea-2026/arena-ai-leaderboards"

[tool.setuptools.packages.find]
include = ["collectors*", "analysis*"]
exclude = ["tests*", "data*", "docs*", "scripts*", "schemas*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.ruff]
line-length = 100
target-version = "py310"
